envoy.json
{
  "watchdog": {},
  "cluster_manager": {},
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": {
      "socket_address": {
        "protocol": "TCP",
        "address": "0.0.0.0",
        "port_value": "${METRICS_PORT}"
      }
    }
  },
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": "${ENVOY_PORT}"
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "typed_config": {
                  "http_filters": [
                    {
                      "name": "envoy.router",
                      "typed_config": {}
                    }
                  ],
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "route": {
                              "cluster": "opsani_canary_proxy"
                            },
                            "match": {
                              "prefix": "/"
                            }
                          }
                        ],
                        "name": "backend"
                      }
                    ],
                    "name": "local_service"
                  },
                  "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
                  "codec_type": "auto"
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.listener.original_dst",
            "typed_config": {}
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "opsani_canary_proxy",
        "type": "ORIGINAL_DST",
        "connect_timeout": "10s",
        "lb_policy": "ORIGINAL_DST_LB",
        "dns_lookup_family": "V4_ONLY"
      }
    ]
  }
}
